# MLopdracht

./: .gitignore  Makefile  README.md  pyproject.toml
.devcontainer/: Dockerfile  devcontainer.json
dev/notebooks/: explore_dataset.ipynb
src/: datasets.py  settings.py
